--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
 		"babel-jest": "^29.3.1",
 		"babel-loader": "^9.1.0",
 		"bootstrap": "^5.2.3",
+		"bootstrap-icons": "^1.10.2",
 		"clean-webpack-plugin": "^4.0.0",
 		"css-loader": "^6.7.2",
 		"html-webpack-plugin": "^5.5.0",
